--- a/index.html
+++ b/index.html
@@ -1,9 +1,69 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta name="description" content="My first webpage, with JavaScript" />
+    <meta name="keywords" content="mths, ics2o" />
+    <meta name="author" content="Dominic M." />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link
+      rel="stylesheet"
+      href="https://code.getmdl.io/1.3.0/material.yellow-cyan.min.css"
+    />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="./site.webmanifest" />
+    <!-- This is the title of the webpage -->
+    <title>My first webpage, with JavaScript!</title>
   </head>
   <body>
-    <p>Paragraph</p>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="./js/script.js"></script>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+          <!-- This is the header of the webpage -->
+          <span class="mdl-layout-title"><h3>Calculator</h3></span>
+        </div>
+      </header>
+      <main class="mdl-layout__content">
+        <form action="#">
+          <div class="page-content">
+            <!--This is the text-->
+            Click the button.
+          </div>
+        </form>
+        <div>
+          <img src="./images/Calculator-Download-PNG-1.png" alt="calculator" />
+          <style>
+            img {
+              float: right;
+            }
+          </style>
+        </div>
+        <br />
+        <!-- Colored raised button -->
+        <button
+          class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored"
+          onclick="myButtonClicked()"
+        >
+          Calculate
+        </button>
+        <br />
+        <br />
+        <div class="page-content-answer">
+          <div id="answer">
+            <div id="hello-world"></div>
+          </div>
+        </div>
+      </main>
+    </div>
   </body>
 </html>
+
